--- a/rasa/rasa/rasa.vcproj
+++ b/rasa/rasa/rasa.vcproj
@@ -149,6 +149,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="1"
+				GenerateManifest="false"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
